connector-notifications: Fix grafana payload
